# easyhome_python

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  local.yml  prod.yml  pyproject.toml
.github/workflows/: 0-ci-cd.yml  1-test-and-lint.yml  2-build-image.yml  3-deploy-prod.yml  build-image.yml  deploy-prod.yml  docker-image.yml  test-and-lint.yml
_old_appication_parser/: Makefile  go.sum
_old_appication_parser/background/: background.go
_old_appication_parser/bot/: actions_settings.go
_old_appication_parser/parser/: diesel.go  house.go
_old_appication_parser/scripts/: parser.go
_old_appication_parser/storage/: apartment.go
api/: Dockerfile  requirements.txt
api/config/: settings.py  urls.py
api/hsearch/: admin.py  models.py  strategy.py  views.py
api/hsearch/graph_ql/: filters.py  queries.py  schema.py
baselines/: mypy.json
config/: celery.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py
easyhome/api/v1/handlers/: profile.py
easyhome/common/: admin.py  utils.py
easyhome/easyhome/: admin.py  admin_inlines.py  apps.py  dependencies.py  models.py
easyhome/easyhome/containers/: application.py  services.py
easyhome/easyhome/migrations/: 0001_initial.py  0002_auto_20210908_1449.py
easyhome/graph_ql/: filters.py  queries.py  schema.py
easyhome/parser/: entity.py  http_client.py  services.py
easyhome/parser/management/commands/: parse.py
easyhome/parser/sites/: base.py  diesel.py  house.py  lalafo.py
easyhome/sso/: admin.py  forms.py  views.py
go_parser/: Dockerfile  Makefile  go.mod  go.sum
go_parser/background/: background.go  matcher.go
go_parser/bot/: actions_offer.go  actions_settings.go  bot.go  utils.go
go_parser/bot/settings/: settings.go
go_parser/cmd/hsearch/: main.go
go_parser/configs/: configs.go
go_parser/parser/: diesel.go  lalafo.go  parser.go
go_parser/storage/: apartment.go  chat.go  other.go  settings.go  storage.go
go_parser/structs/: structs.go
hsearch/api/: router.py
hsearch/api/v1/: schemas.py
hsearch/api/v1/handlers/: apartment.py  profile.py
hsearch/common/: admin.py  utils.py
hsearch/hsearch/: admin.py  admin_inlines.py  models.py
hsearch/hsearch/migrations/: 0001_initial.py  0002_auto_20210908_1449.py  0003_alter_apartment_currency_alter_apartment_site.py  0004_apartment_deleted_at_apartment_viewed_at.py
hsearch/parser/: entity.py  http_client.py  services.py  tasks.py
hsearch/parser/management/commands/: parse.py
hsearch/parser/sites/: base.py  diesel.py  lalafo.py
hsearch/sso/: admin.py  strategy.py  views.py
infra/nginx/: docker-compose.yml
infra/nginx/config/vhost.d/: ik.kg  ik.kg_location
parser/: Makefile  go.mod
parser/background/: background.go  garbage.go  grabber.go
parser/cmd/hsearch/: main.go
parser/configs/: configs.go
parser/parser/: house.go  lalafo.go  parser.go
parser/storage/: apartment.go  offer.go  settings.go
parser/structs/: structs.go
templates/: index.html
tests/: conftest.py  helpers.py
tests/easyhome/: factories.py
tests/graph_ql/: test_queries.py
tests/parser/__dataset__/: diesel_293168645.html  diesel_first_page.html  house_08753936.html  house_first_page.html  lalafo_107495362.html  lalafo_85063437.html  lalafo_first_page.html
tests/parser/sites/: test_diesel.py  test_house.py  test_lalafo.py
unixtimestampfield/: fields.py  submiddleware.py  tests.py
unixtimestampfield/templatetags/: unixtimestampfield.py
